--- a/res/layout/adaptivehitlist.xml
+++ b/res/layout/adaptivehitlist.xml
@@ -38,7 +38,7 @@
         android:layout_marginBottom="10dp"
         android:entries="@array/hitlistduration_entries"
         android:prompt="@string/Duration"
-        android:spinnerMode="dialog" />
+        android:spinnerMode="dialog" />-->
 
     <Button
         android:id="@+id/hitlist_OK"
