--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -106,12 +106,14 @@
     </string-array> 
     <string-array name="uploadfrequency_values">
         <item>Gar nicht!</item>
+        <item>Minütlich</item>
         <item>Stündlich</item>
         <item>Täglich</item>
         <item>Wöchentlich</item>
     </string-array>
     <string-array name="uploadfrequency_entries">
         <item>0</item>
+        <item>30</item>
         <item>1</item>
         <item>10</item>
         <item>20</item>
