--- a/res/layout/values.xml
+++ b/res/layout/values.xml
@@ -27,7 +27,7 @@
         android:layout_gravity="center_horizontal"
         android:drawableLeft="@android:drawable/ic_delete"
         android:padding="5dp"
-        android:text="@string/Stop_myStress" />
+        android:text="@+string/Stop_myStress" />
 
    <ListView android:id="@+id/valueList"
         android:layout_width="fill_parent"
