--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -21,4 +21,11 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
       	<item>Remote</item>
         <item>Local</item>
     </string-array>  
+    
+    <string-array name="questions">
+        <item>@string/q1</item>
+        <item>@string/q2</item>
+        <item>@string/q3</item>
+        <item>@string/q4</item>
+    </string-array>
 </resources>
