--- a/res/layout/stress_selection.xml
+++ b/res/layout/stress_selection.xml
@@ -18,6 +18,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center|left"
     android:orientation="vertical" >
 
     <TextView
@@ -33,12 +34,38 @@
 	    android:layout_height="wrap_content"
 	    android:padding="10dp"
 	    android:text="@string/q1" />
+	
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left|right"
+        android:orientation="horizontal" >
+        
+        <TextView
+            android:id="@+id/weak1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="10dp"
+            android:text="@string/weak" />
+        
+        <TextView
+            android:id="@+id/strong1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:paddingRight="10dp"
+            android:text="@string/strong" />
+        
+	</RelativeLayout>
 
-	<SeekBar
-	    android:id="@+id/slider1"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:max="80" />
+    <SeekBar
+        android:id="@+id/slider1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:max="8"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp" />
     
     <TextView 
 	    android:id="@+id/q2"
@@ -47,12 +74,38 @@
 	    android:padding="10dp"
 	    android:text="@string/q2"
 	    />
-
+	
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left|right"
+        android:orientation="horizontal" >
+        
+        <TextView
+            android:id="@+id/weak2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="10dp"
+            android:text="@string/weak" />
+        
+        <TextView
+            android:id="@+id/strong2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:paddingRight="10dp"
+            android:text="@string/strong" />
+        
+	</RelativeLayout>
+    
     <SeekBar
         android:id="@+id/slider2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:max="80" />
+        android:max="8"
+	    android:paddingLeft="40dp"
+	    android:paddingRight="40dp" />
     
     <TextView 
 	    android:id="@+id/q3"
@@ -62,11 +115,37 @@
 	    android:text="@string/q3"
 	    />
 	
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left|right"
+        android:orientation="horizontal" >
+        
+        <TextView
+            android:id="@+id/weak3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="10dp"
+            android:text="@string/weak" />
+        
+        <TextView
+            android:id="@+id/strong3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:paddingRight="10dp"
+            android:text="@string/strong" />
+        
+	</RelativeLayout>
+    
     <SeekBar
         android:id="@+id/slider3"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:max="80" />
+        android:max="8"
+	    android:paddingLeft="40dp"
+	    android:paddingRight="40dp" />
     
     <TextView
         android:id="@+id/q4"
@@ -75,11 +154,44 @@
         android:padding="10dp"
         android:text="@string/q4" />
 	
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left|right"
+        android:orientation="horizontal" >
+        
+        <TextView
+            android:id="@+id/weak4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="10dp"
+            android:text="@string/weak" />
+        
+        <TextView
+            android:id="@+id/strong4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:paddingRight="10dp"
+            android:text="@string/strong" />
+        
+	</RelativeLayout>
+
     <SeekBar
         android:id="@+id/slider4"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:max="80" />
+        android:max="8"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp" />
+
+    <Button
+        android:id="@+id/ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/OK" />
     
     <LinearLayout
         android:layout_width="fill_parent"
