--- a/res/layout/stress_selection.xml
+++ b/res/layout/stress_selection.xml
@@ -33,66 +33,84 @@
         android:layout_height="wrap_content"
         android:text="@string/q1" />
 
-    <RadioGroup
-        android:id="@+id/radioGroup1"
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/l0" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/l1" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/l2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/l3" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/l4" />
+    </LinearLayout>
+
+    <RadioGroup
+        android:id="@+id/radioGroup1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal" >
 
         <RadioButton
             android:id="@+id/radio10"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l0"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio11"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l1"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio12"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l2"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio13"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l3"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio14"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l4"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
     </RadioGroup>
 
     <TextView
@@ -101,7 +119,7 @@
         android:layout_height="wrap_content"
         android:text="@string/q2" />
 
-        <RadioGroup
+    <RadioGroup
         android:id="@+id/radioGroup2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -109,58 +127,33 @@
 
         <RadioButton
             android:id="@+id/radio20"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l0"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio21"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l1"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio22"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l2"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio23"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l3"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio24"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l4"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
     </RadioGroup>
 
     <TextView
@@ -169,7 +162,7 @@
         android:layout_height="wrap_content"
         android:text="@string/q3" />
 
-        <RadioGroup
+    <RadioGroup
         android:id="@+id/radioGroup3"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -177,58 +170,33 @@
 
         <RadioButton
             android:id="@+id/radio30"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l0"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio31"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l1"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio32"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l2"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio33"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l3"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio34"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l4"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
     </RadioGroup>
 
     <TextView
@@ -237,7 +205,7 @@
         android:layout_height="wrap_content"
         android:text="@string/q4" />
 
-        <RadioGroup
+    <RadioGroup
         android:id="@+id/radioGroup4"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -245,58 +213,33 @@
 
         <RadioButton
             android:id="@+id/radio40"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l0"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio41"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l1"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio42"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l2"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio43"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l3"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/radio44"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawableBottom="@drawable/custom_radio_button"
-            android:gravity="center"
-            android:text="@string/l4"
-            android:textSize="12sp" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
     </RadioGroup>
 
     <LinearLayout
