--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -16,12 +16,20 @@ You should have received a copy of the GNU Lesser General Public License
 along with this library; if not, write to the Free Software Foundation, Inc.,
 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 -->
-<resources>  
+<resources>
+
     <string-array name="questions">
         <item>@string/q1</item>
         <item>@string/q2</item>
         <item>@string/q3</item>
         <item>@string/q4</item>
     </string-array>
-    
+    <string-array name="interval">
+        <item>Heute</item>
+        <item>3 Tagen</item>
+        <item>1 Woche</item>
+        <item>2 Wochen</item>
+        <item>Gesamt</item>
+    </string-array>
+
 </resources>
