--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -23,4 +23,11 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
         <item>@string/q3</item>
         <item>@string/q4</item>
     </string-array>
+        <string-array name="interval">
+        <item>today</item>
+        <item>3 days</item>
+        <item>1 week</item>
+        <item>2 weeks</item>
+        <item>total</item>
+    </string-array>
 </resources>
