--- a/res/menu/options_main.xml
+++ b/res/menu/options_main.xml
@@ -20,8 +20,12 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 
     <item
         android:id="@+id/main_copyright"
-        android:icon="@android:drawable/ic_menu_info_details"
+        android:icon="@drawable/info"
         android:title="@string/main_About"/>
+        <item
+        android:id="@+id/main_help"
+        android:icon="@drawable/help"
+        android:title="@string/Help"/>
     <item
         android:id="@+id/main_uniqueID"
         android:icon="@drawable/storage"
